# Kubot

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/config/: param.yaml
beginner_tutorials/include/beginner_tutorials/: talker.h
beginner_tutorials/launch/: mylaunch.launch
beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  foot_odom.cpp  listener.cpp  open_cr_module.cpp  soccer_demo.cpp  talker.cpp
dxl_serial-master/include/dxl_serial/: dxl_serial.h
dxl_serial-master/src/: dxl_serial.cpp  dxl_serial_main.cpp
kinematics/: CMakeLists.txt  package.xml
kinematics/include/: kinematics.h
kinematics/kubot/: CMakeLists.txt  package.xml
kinematics/kubot/include/: kubot.h
kinematics/kubot/src/: kubot.cpp
kinematics/src/: kinematics.cpp
kubot/: package.xml
kubot/include/: kubot.h
kubot/src/: kubot.cpp
